--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fi">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>LinkedEvents form prototype</title>
+    <title>Syöttölomakeprototyyppi v.01</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -16,17 +16,44 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  </head>
+  <body>
+    <h1>Syöttölomake v0.1</h1>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-
-    <form class="form-horizontal" role="form">
-      <form>
-
+    <div class="container">
+  <h2>Tiedot</h2>
+  <form role="form">
+    <div class="form-group">
+      <label for="name">Nimi:</label>
+      <input type="name" class="form-control" id="name" placeholder="Tapahtuman nimi">
+    </div>
+    <div class="form-group">
+      <label for="short_description">Lyhyt kuvaus:</label>
+      <input type="short_description" class="form-control" id="short_description" placeholder="Lisää ingressi">
+    </div>
+    <div class="form-group">
+      <label for="description">Kuvaus:</label>
+      <input type="description" class="form-control" id="description" placeholder="Lisää kuvaus">
+    </div>
+    <div class="form-group">
+      <label for="keywords">Asiasanat:</label>
+      <input type="keywords" class="form-control" id="keywords" placeholder="Aarnikotkat">
+    </div>
+    <div class="form-group">
+      <label for="start_date">Alkupvm:</label>
+      <input type="datetime" class="form-control" id=date_start>
+    </div>
+    <div class="form-group">
+      <label for="date_end">Loppupvm:</label>
+      <input type="datetime" class="form-control" id=date_end>
+    </div>
+    <button type="submit" class="btn btn-default">Lisää</button>
+  </form>
+</div>
 
   </body>
 </html>
